Found a problem with the export, the file got cut off before the last part was written. This should fix #35. I also fixed a problem with the delete button that didn't work.

--- a/app/assets/stylesheets/wizard/_wizard.css.scss
+++ b/app/assets/stylesheets/wizard/_wizard.css.scss
@@ -111,5 +111,10 @@
         @include border-bottom-right-radius(4px);
       }
     }
+    
+    form {
+      display: inline;
+      margin: 0;
+    }
   }
 }
